--- a/pipelines/ai-model-download.yaml
+++ b/pipelines/ai-model-download.yaml
@@ -12,6 +12,7 @@ steps:
   - name: pypyr.steps.py
     in:
       py: |  
+        import boto3
         import os
         import pathlib
         from dotenv import load_dotenv
@@ -19,3 +20,12 @@ steps:
         dest_path = pathlib.Path(local_dest_dir).resolve()
         dest_path.mkdir(exist_ok=True, parents=True)
         print(dest_path, dest_path.exists())
+        session = boto3.session.Session()
+        bucket_name = os.environ.get("BUCKET_NAME")
+        region = os.environ.get("REGION_NAME")
+        endpoint_url = os.environ.get("ENDPOINT_URL") or None
+        client = session.client('s3', region_name=region, endpoint_url=endpoint_url)
+        for key in file_keys:
+          fname = pathlib.Path(key).name
+          dl_path = dest_path / fname
+          client.download_file(bucket_name, key, str(dl_path))
